fixed image issues and removed some extra margins that wernt needed

--- a/style.css
+++ b/style.css
@@ -152,35 +152,29 @@ i{
 
 .projects{
 	margin-top: 100px;
-	//margin-left: 15px;
-	//margin-right: 40px;
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	justify-content: space-between;
+	margin-left: -20px;
 	/*cursor: default;*/
 }
 
 .projects img{
-	width: 500px;
-	margin-left: 25px;
-	margin-bottom: 50px;
+	width: 100%;
 }
 
 .projects h2{
 	font-family: sans-serif;
 	font-weight: 600;
-	margin-top: -50px;
-	margin-left: 25px;
 	margin-bottom: 15px;
 	color: black;
 }
 
 .projects span{
 	font-family: sans-serif;
-	margin-left: 25px;
-	margin-top: 5px;
 	color: black;
 	font-size: 16px;
 }
@@ -188,6 +182,11 @@ i{
 .projects a{
 	text-decoration: none;
 	/*cursor: default;*/
+	flex-basis: 390px;
+	flex-grow: 1;
+	flex-shrink: 1;
+	margin-left: 20px;
+
 }
 
 .projects i{
@@ -198,14 +197,14 @@ i{
 
 .form-section{
 	margin-top: 70px;
-	margin-left: 70px;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 }
 
 .get-in-touch{
-	margin-left: 5px;
+	margin-right: 100px;
 }
 
 .form-section h2{
@@ -229,11 +228,9 @@ i{
 }
 
 form{
-	width: 65%;
-	margin-left: 80px;
-	margin-right: 20px;
-
+	min-width: 600px;
 	height: auto;
+	flex-grow: 1
 }
 
 .fir-las{
@@ -299,7 +296,7 @@ textarea{
 }
 
 .aboutme{
-	background-color: #f5f3f0;
+	/*background-color: #f5f3f0;*/
 }
 
 .coding{
